DTO = Display Terrific Otter

--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -22,7 +22,10 @@
 
 <p th:text="'Pris: ' + ${totalPrice}"></p>
 <br><br>
-<button><a href="/book">Gå tillbaka till start</a> </button>
+<button><a href="/book">Gå tillbaka till start</a></button>
+<br>
+<img th:src="@{images/glada-uttern-trnsp.png}" alt="logo">
+<br>
 
 </body>
 </html>
