--- a/src/main/resources/templates/errorCVE.html
+++ b/src/main/resources/templates/errorCVE.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
+<div class="container mt-4">
     <h1> Oops! </h1>
     <h2 th:text="${errorMessage}"></h2>
+    <br>
+    <img th:src="@{images/glada-uttern-trnsp.png}" alt="logo" class="center">
     <br>
     <p><a href="/">Gå till startsidan</a></p>
 </div>
