--- a/src/main/resources/templates/error-500.html
+++ b/src/main/resources/templates/error-500.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
+<div class="container mt-4">
     <h1> Attans, något gick fel! </h1>
     <h2 th:text="'Felkod: ' +${code}"></h2>
     <h2 th:text="${mess}"></h2>
+    <br>
+    <img th:src="@{images/glada-uttern-trnsp.png}" alt="logo">
     <br>
     <p><a href="/">Gå till startsidan</a></p>
 </div>
