--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
             padding: 30px 120px; /* Stor knappstorlek */
             font-size: 1.5rem; /* Stor textstorlek */
         }
+
         .container {
             border: 2px solid #007bff; /* Ramfärg */
             border-radius: 10px; /* Rundade hörn */
@@ -17,11 +18,13 @@
             max-width: 700px; /* Max bredd */
             margin: 30px auto auto;
         }
+
         .btn-group {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
+
         .btn-group .btn {
             width: 100%;
             margin-bottom: 30px; /* Avstånd mellan knapparna */
@@ -29,12 +32,17 @@
     </style>
 </head>
 <body>
-<div class="container mt-4">
+<div class="container mt-4 justify-content-center">
     <h1 class="text-center">Startsida</h1><br><br>
     <div class="btn-group">
         <a href="/book" class="btn btn-primary btn-lg">Sök lediga rum</a>
         <a href="/bookings/search" class="btn btn-primary btn-lg">Sök bokningar</a>
-        <a href="/customer/search" class="btn btn-primary btn-lg" >Ändra kund</a>
+        <a href="/customer/search" class="btn btn-primary btn-lg">Ändra kund</a>
+    </div>
+    <br>
+    <div class="d-flex justify-content-center">
+        <img th:src="@{images/glada-uttern-trnsp.png}" alt="logo">
+        <br>
     </div>
 </div>
 </body>
