--- a/src/main/resources/templates/searchAvailability.html
+++ b/src/main/resources/templates/searchAvailability.html
@@ -89,6 +89,10 @@
             </div>
         </form>
     </div>
+    <div class="d-flex justify-content-center">
+        <img th:src="@{images/glada-uttern-trnsp.png}" alt="logo">
+        <br>
+    </div>
 </div>
 
 <script>
