--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -92,5 +92,9 @@
         </div>
     </div>
 </div>
+<div class="d-flex justify-content-center">
+    <img th:src="@{images/glada-uttern-trnsp.png}" alt="logo">
+    <br>
+</div>
 </body>
 </html>
