--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -71,11 +71,11 @@
             </div>
             <div class="form-group">
                 <label for="checkInDate">Check-in datum:</label>
-                <input type="text" class="form-control" id="checkInDate" name="checkInDate" th:value="${booking.checkInDate}" required>
+                <input type="date" class="form-control" id="checkInDate" name="checkInDate" th:value="${booking.checkInDate}" required>
             </div>
             <div class="form-group">
                 <label for="checkOutDate">Check-out datum:</label>
-                <input type="text" class="form-control" id="checkOutDate" name="checkOutDate" th:value="${booking.checkOutDate}" required>
+                <input type="date" class="form-control" id="checkOutDate" name="checkOutDate" th:value="${booking.checkOutDate}" required>
             </div>
             <div class="form-group">
                 <label for="roomType">Rumstyp:</label>
