--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Avtalskunder</h1>
+<div class="container">
+
+    <h1>Avtalskunder</h1>
+
+    <table id="cc-table" class="" style="width:100%">
+        <thead>
+        <tr>
+            <th>Företag</th>
+            <th>Kontakt</th>
+            <th>Land</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Persson Kommanditbolag</td>
+            <td>Maria Åslund</td>
+            <td>Sverige</td>
+        </tr>
+        <tr>
+            <td>Karlsson-Eriksson</td>
+            <td>Jörgen Gustafsson</td>
+            <td>Sverige</td>
+        </tr>
+        <tr>
+            <td>Eriksson Group</td>
+            <td>Anna Karlsson</td>
+            <td>Sverige</td>
+        </tr>
+
+        </tbody>
+        <tfoot>
+        <tr>
+            <th>Företag</th>
+            <th>Kontakt</th>
+            <th>Land</th>
+        </tr>
+        </tfoot>
+    </table>
+</div>
 </body>
 </html>
