blacklist button and classes added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,7 @@
         <a href="/bookings/search" class="btn btn-primary btn-lg">Sök bokningar</a>
         <a href="/customer/search" class="btn btn-primary btn-lg">Ändra kund</a>
         <a href="contract-customer/search" class="btn btn-primary btn-lg">Sök avtalskund</a>
+        <a href="/blacklist" class="btn btn-primary btn-lg">Blacklist admin</a>
     </div>
     <br>
     <div class="d-flex justify-content-center">
