--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -10,41 +10,27 @@
 <div class="container">
 
     <h1>Avtalskunder</h1>
-
-    <table id="cc-table" class="" style="width:100%">
-        <thead>
-        <tr>
-            <th>Företag</th>
-            <th>Kontakt</th>
-            <th>Land</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Persson Kommanditbolag</td>
-            <td>Maria Åslund</td>
-            <td>Sverige</td>
-        </tr>
-        <tr>
-            <td>Karlsson-Eriksson</td>
-            <td>Jörgen Gustafsson</td>
-            <td>Sverige</td>
-        </tr>
-        <tr>
-            <td>Eriksson Group</td>
-            <td>Anna Karlsson</td>
-            <td>Sverige</td>
-        </tr>
-
-        </tbody>
-        <tfoot>
-        <tr>
-            <th>Företag</th>
-            <th>Kontakt</th>
-            <th>Land</th>
-        </tr>
-        </tfoot>
-    </table>
+    <div th:if="${customers.size() > 0}">
+        <table id="cc-table" class="table table-striped" style="width:100%">
+            <thead>
+            <tr>
+                <th>Företag</th>
+                <th>Kontaktperson</th>
+                <th>Land</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="customer : ${customers}">
+                <td th:text="${customer.email}">Företagsnamn</td>
+                <td th:text="${customer.customerName}">Kontaktperson</td>
+                <td th:text="${customer.email}">Land</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="" th:unless="${customers.size() > 0}">
+        <span>Inga avtalskunder hittades</span>
+    </div>
 </div>
 </body>
 </html>
