Adds Search bar with mock data

--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avtalskunder</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
 <div class="container">
 
-    <h1>Avtalskunder</h1>
+    <h1 class="text-center">Avtalskunder</h1>
     <div th:if="${customers.size() > 0}">
+
+        <form action="contract-customer/search" method="post">
+            <div class="form-group" style="float: right">
+                <label for="search"></label>
+                <input type="text" id="search" name="search">
+                <input type="submit" value="Sök" class="btn btn-primary">
+            </div>
+        </form>
+
         <table id="cc-table" class="table table-striped" style="width:100%">
             <thead>
             <tr>
-                <th>Företag</th>
-                <th>Kontaktperson</th>
-                <th>Land</th>
+                <th>Företag <i class="fa-sharp fa-solid fa-sort"></i></th>
+                <th>Kontaktperson <i class="fa-sharp fa-solid fa-sort"></i></th>
+                <th>Land <i class="fa-sharp fa-solid fa-sort"></i></th>
             </tr>
             </thead>
             <tbody>
