--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
         <a href="/book" class="btn btn-primary btn-lg">Sök lediga rum</a>
         <a href="/bookings/search" class="btn btn-primary btn-lg">Sök bokningar</a>
         <a href="/customer/search" class="btn btn-primary btn-lg">Ändra kund</a>
-        <a href="contract-customer/search" class="btn btn-primary btn-lg">Sök avtalskund</a>
+        <a href="contract-customer" class="btn btn-primary btn-lg">Sök avtalskund</a>
     </div>
     <br>
     <div class="d-flex justify-content-center">
