--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -6,24 +6,7 @@
     <title>Bokningshantering</title>
     <!-- Lägg till Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .navbar {
-            background-color: #007bff;
-            backdrop-filter: blur(10px);
-            height: 80px;
-        }
-        .navbar-brand {
-            color: #fff;
-            font-size: 40px;
-        }
-        .nav-link {
-            color: #fff;
-            font-size: 20px;
-        }
-        .container {
-            margin-top: 30px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="/css/style.css">
 </head>
 <body>
 <div class="container">
@@ -43,6 +26,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/customer/search">Ändra kund</a> <!-- Länk till ändra kund -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contractCustomer">Sök avtalskund</a> <!-- Länk till sök avtalskund -->
                 </li>
             </ul>
         </div>
