--- a/src/main/resources/templates/contractCustomerInfo.html
+++ b/src/main/resources/templates/contractCustomerInfo.html
@@ -38,15 +38,15 @@
     <div class="customer-details">
         <h2>Kundinformation</h2>
         <br>
-        <p><strong>Företagsnamn:</strong> <span th:text="${contractCustomer.companyName}"></span></p>
-        <p><strong>Kontaktnamn:</strong> <span th:text="${contractCustomer.contactName}"></span></p>
-        <p><strong>Kontakttitel:</strong> <span th:text="${contractCustomer.contactTitle}"></span></p>
-        <p><strong>Gatuadress:</strong> <span th:text="${contractCustomer.streetAddress}"></span></p>
-        <p><strong>Stad:</strong> <span th:text="${contractCustomer.city}"></span></p>
-        <p><strong>Postnummer:</strong> <span th:text="${contractCustomer.postalCode}"></span></p>
-        <p><strong>Land:</strong> <span th:text="${contractCustomer.country}"></span></p>
-        <p><strong>Telefonnummer:</strong> <span th:text="${contractCustomer.phone}"></span></p>
-        <p><strong>Fax:</strong> <span th:text="${contractCustomer.fax}"></span></p>
+        <p><strong>Företagsnamn:</strong> <span th:text="${customer.companyName}"></span></p>
+        <p><strong>Kontaktnamn:</strong> <span th:text="${customer.contactName}"></span></p>
+        <p><strong>Kontakttitel:</strong> <span th:text="${customer.contactTitle}"></span></p>
+        <p><strong>Gatuadress:</strong> <span th:text="${customer.streetAddress}"></span></p>
+        <p><strong>Stad:</strong> <span th:text="${customer.city}"></span></p>
+        <p><strong>Postnummer:</strong> <span th:text="${customer.postalCode}"></span></p>
+        <p><strong>Land:</strong> <span th:text="${customer.country}"></span></p>
+        <p><strong>Telefonnummer:</strong> <span th:text="${customer.phone}"></span></p>
+        <p><strong>Fax:</strong> <span th:text="${customer.fax}"></span></p>
     </div>
 </div>
 </body>
