--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -9,10 +9,33 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="/css/style.css">
 </head>
 <body>
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="/"><i>Startsida</i></a> <!-- Länk till startsidan -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/book">Sök lediga rum</a> <!-- Länk till sök lediga rum -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/bookings/search">Sök bokningar</a> <!-- Länk till sök bokningar -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/customer/search">Ändra kund</a> <!-- Länk till ändra kund -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contractCustomer">Sök avtalskund</a> <!-- Länk till sök avtalskund -->
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 <div class="container mt-4">
-
     <h1 class="text-center mb-5">Avtalskunder</h1>
-
     <div th:if="${customers.size() > 0}">
         <form action="contractCustomer/search" method="post" class="d-flex flex-row justify-content-end mb-3">
             <div class="mr-2">
@@ -39,19 +62,17 @@
             </thead>
             <tbody>
             <tr th:each="customer : ${customers}">
-                <td th:text="${customer.email}">Företagsnamn</td>
-                <td th:text="${customer.customerName}">Kontaktperson</td>
-                <td th:text="${customer.email}">Land</td>
+                <td><a th:href="@{/contractCustomer/{id}(id=${customer.id})}" style="cursor: pointer;"><span th:text="${customer.companyName}">Företagsnamn</span></a></td>
+                <td th:text="${customer.contactName}">Kontaktperson</td>
+                <td th:text="${customer.country}">Land</td>
             </tr>
             </tbody>
         </table>
     </div>
-
     <div class="" th:unless="${customers.size() > 0}">
         <div class="alert alert-danger text-center" role="alert">Inga avtalskunder hittades</div>
         <a class="btn btn-success" href="/contractCustomer" role="button">Gå tillbaka</a>
     </div>
-
 </div>
 </body>
 </html>
