--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -11,24 +11,32 @@
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/"><i>Startsida</i></a> <!-- Länk till startsidan -->
+        <a class="navbar-brand" href="/"><i>Startsida</i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/book">Sök lediga rum</a> <!-- Länk till sök lediga rum -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBookings" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Bokningshantering
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
+                        <a class="dropdown-item" href="/book">Sök lediga rum</a>
+                        <a class="dropdown-item" href="/bookings/search">Sök bokningar</a>
+                    </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/bookings/search">Sök bokningar</a> <!-- Länk till sök bokningar -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/customer/search">Ändra kund</a> <!-- Länk till ändra kund -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contractCustomer">Sök avtalskund</a> <!-- Länk till sök avtalskund -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCustomer" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Kundhantering
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
+                        <a class="dropdown-item" href="/customer/search">Ändra kund</a>
+                        <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
+                        <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
+                    </div>
+
                 </li>
             </ul>
         </div>
