--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -50,13 +50,28 @@
             <thead>
             <tr>
                 <th class="table-link">
-                    <a th:href="@{/contractCostumer/sort}">Företag <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    <div th:if="${sortOrder == 'ASC' && sortCol == 'companyName'}">
+                        <a th:href="@{/contractCustomer?sortOrder=DESC&sortCol=companyName}">Företag <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    </div>
+                    <div th:unless="${sortOrder == 'ASC' && sortCol == 'companyName'}">
+                        <a th:href="@{/contractCustomer?sortOrder=ASC&sortCol=companyName}">Företag <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    </div>
                 </th>
                 <th class="table-link">
-                    <a th:href="@{/contractCostumer/sort}">Kontaktperson <i class="fa-sharp fa-solid fa-sort arrows"></i></a>
+                    <div th:if="${sortOrder == 'ASC' && sortCol == 'contactName'}">
+                        <a th:href="@{contractCustomer?sortOrder=DESC&sortCol=contactName}">Kontaktperson <i class="fa-sharp fa-solid fa-sort arrows"></i></a>
+                    </div>
+                    <div th:unless="${sortOrder == 'ASC' && sortCol == 'contactName'}">
+                        <a th:href="@{contractCustomer?sortOrder=ASC&sortCol=contactName}">Kontaktperson <i class="fa-sharp fa-solid fa-sort arrows"></i></a>
+                    </div>
                 </th>
                 <th class="table-link">
-                    <a th:href="@{/contractCostumer/sort}">Land <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    <div th:if="${sortOrder == 'ASC' && sortCol == 'country'}">
+                        <a th:href="@{contractCustomer?sortOrder=DESC&sortCol=country}">Land <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    </div>
+                    <div th:unless="${sortOrder == 'ASC' && sortCol == 'country'}">
+                        <a th:href="@{contractCustomer?sortOrder=ASC&sortCol=country}">Land <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    </div>
                 </th>
             </tr>
             </thead>
