--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -98,8 +98,9 @@
     border-radius: 12px;
     padding: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 0;
 }
-.dropdown:hover .dropdown-menu {
+.nav-item.dropdown:hover .dropdown-menu {
     display: block;
 }
 .dropdown-item {
@@ -107,8 +108,8 @@
 }
 .dropdown-item:hover {
     background-color: rgba(0, 123, 255, 0.7);
-    color: #ffffff;
 }
+
 
 
 
