--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bokningsbekräftelse</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="/css/style.css">
 </head>
 <body>
@@ -34,19 +34,14 @@
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                     </div>
-
                 </li>
             </ul>
         </div>
     </nav>
 </div>
 <div class="container mt-4">
-    <div class="row">
-        <div class="col">
-            <h1 class="text-center">Bokningsbekräftelse</h1>
-            <hr>
-        </div>
-    </div>
+    <h1 class="text-center">Bokningsbekräftelse</h1>
+    <hr>
     <div class="row">
         <div class="col-md-6">
             <h2 class="mt-4 mb-3">Bokningsinformation</h2>
