--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -26,6 +26,8 @@
 .navbar-brand {
     color: #fff;
     font-size: 40px;
+    font-family: "sans-serif", serif;
+    font-style: italic;
 }
 .nav-link {
     color: #fff;
