--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -88,15 +88,16 @@
             <tr>
                 <th class="table-link">
                     <a th:href="@{/contractCustomer(sortOrder=${(sortOrder == 'ASC' && sortCol == 'companyName') ? 'DESC' : 'ASC'},
-                    sortCol=companyName, search=${search})}">Företag <i class="fa-sharp fa-solid fa-sort"></i></a>
+                    sortCol=companyName, search=${search})}">Företag <i th:class="${sortCol == 'companyName'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up': 'fa-solid fa-sort-down')"></i>
+                    </a>
                 </th>
                 <th class="table-link">
                     <a th:href="@{contractCustomer(sortOrder=${(sortOrder == 'ASC' && sortCol == 'contactName') ? 'DESC' : 'ASC'},
-                    sortCol=contactName, search=${search})}">Kontaktperson <i class="fa-sharp fa-solid fa-sort arrows"></i></a>
+                    sortCol=contactName, search=${search})}">Kontaktperson <i th:class="${sortCol == 'contactName'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up': 'fa-solid fa-sort-down')"></i></a>
                 </th>
                 <th class="table-link">
                     <a th:href="@{contractCustomer(sortOrder=${(sortOrder == 'ASC' && sortCol == 'country') ? 'DESC' : 'ASC'},
-                      sortCol=country, search=${search})}">Land <i class="fa-sharp fa-solid fa-sort"></i></a>
+                      sortCol=country, search=${search})}">Land <i th:class="${sortCol == 'country'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up': 'fa-solid fa-sort-down')"></i></a>
                 </th>
             </tr>
             </thead>
