--- a/src/main/resources/templates/contractCustomerTable.html
+++ b/src/main/resources/templates/contractCustomerTable.html
@@ -43,7 +43,7 @@
     </nav>
 </div>
 <div class="container mt-4">
-    <h1 class="text-center mb-5">Avtalskunder</h1>
+    <h1 class="text-center mb-5 mt-5">Avtalskunder</h1>
     <div th:if="${customers.size() > 0}">
         <form action="/contractCustomer" method="get" class="d-flex flex-row justify-content-end mb-3">
             <div class="mr-2">
@@ -88,16 +88,16 @@
             <tr>
                 <th class="table-link col-md-4">
                     <a th:href="@{/contractCustomer(sortOrder=${(sortOrder == 'ASC' && sortCol == 'companyName') ? 'DESC' : 'ASC'},
-                    sortCol=companyName, search=${search})}">Företag <i th:class="${sortCol == 'companyName'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up': 'fa-solid fa-sort-down')"></i>
+                    sortCol=companyName, search=${search})}">Företag<i th:class="${sortCol == 'companyName'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down')"></i>
                     </a>
                 </th>
                 <th class="table-link col-md-4">
                     <a th:href="@{contractCustomer(sortOrder=${(sortOrder == 'ASC' && sortCol == 'contactName') ? 'DESC' : 'ASC'},
-                    sortCol=contactName, search=${search})}">Kontaktperson <i th:class="${sortCol == 'contactName'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up': 'fa-solid fa-sort-down')"></i></a>
+                    sortCol=contactName, search=${search})}">Kontakt<i th:class="${sortCol == 'contactName'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down')"></i></a>
                 </th>
                 <th class="table-link col-md-4">
                     <a th:href="@{contractCustomer(sortOrder=${(sortOrder == 'ASC' && sortCol == 'country') ? 'DESC' : 'ASC'},
-                      sortCol=country, search=${search})}">Land <i th:class="${sortCol == 'country'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up': 'fa-solid fa-sort-down')"></i></a>
+                      sortCol=country, search=${search})}">Land<i th:class="${sortCol == 'country'} ? (${sortOrder =='ASC'} ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down')"></i></a>
                 </th>
             </tr>
             </thead>
